// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Paragraph component Aligned 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  text-align: right;
}

.c0 {
  text-transform: none;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragraph component resized 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 2.875rem;
  line-height: 4rem;
}

.c0 {
  text-transform: none;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragraph component text transformed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  text-transform: uppercase;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragraph component tuncated 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c1 {
  text-transform: none;
}

.c0 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<p
  className="c0 c1 c2"
>
  Hello
</p>
`;

exports[`A Paragraph component with variant 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  text-transform: none;
  color: #CC1F36;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragrapht component weight 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 700;
}

.c0 {
  text-transform: none;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Text component decorated 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-transform: none;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Text component wrapped 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  text-transform: none;
  overflow-wrap: break-word;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A default Paragraph component 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  text-transform: none;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;
